added exclamation point to 2nd heading

--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>openingg............!!!!</h1>
-    <h1>Open up hello .html</h1>
+    <h1>Open up hello .html!!</h1>
     Hello!!..World
   </body>
 </html>
